Changed when return user data it will only return the funds without it expenses.